[gd_scene load_steps=4 format=3 uid="uid://b4argu08l2t5b"]

[ext_resource type="Script" uid="uid://brgr3lddynyr1" path="res://Scripts/UI/Components/ability_icon_timers.gd" id="1_an4no"]
[ext_resource type="Texture2D" uid="uid://bomutwo83repx" path="res://Assets/Icons/icon.svg" id="1_x7buu"]
[ext_resource type="Texture2D" uid="uid://cyxegf1knqb67" path="res://Assets/Miscellaneous/White 2x2.jpg" id="2_an4no"]

[node name="AbilityIconTimers" type="Control"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_an4no")

[node name="AbilityIconButton" type="Button" parent="."]
custom_minimum_size = Vector2(64, 64)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="AbilityIcon" type="TextureRect" parent="AbilityIconButton"]
clip_children = 2
custom_minimum_size = Vector2(64, 64)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_x7buu")
expand_mode = 1

[node name="ProgressOverlay" type="TextureProgressBar" parent="AbilityIconButton/AbilityIcon"]
self_modulate = Color(1, 0, 0, 0.6117647)
custom_minimum_size = Vector2(64, 64)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
max_value = 1.0
step = 0.01
fill_mode = 3
nine_patch_stretch = true
texture_progress = ExtResource("2_an4no")
